fix code block horizontal overflow

--- a/css/blog-item.css
+++ b/css/blog-item.css
@@ -1,8 +1,8 @@
 .menu_level_2 {
-  padding-left: 30px;
+  padding-left: 15px;
 }
 .menu_level_3 {
-  padding-left: 50px;
+  padding-left: 30px;
 }
 .page-toc a {
   color: #555;
@@ -10,4 +10,8 @@
 .page-toc a:hover {
   color: #222;
   text-decoration: underline;
+}
+
+.content .code {
+  overflow-x: scroll;
 }
